C3/FILES/allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: hello  # deployment label for pod - TO: oc describe pod hello-6c4984d949-kzd97|grep Labels deployment=
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: network-test   # this is the namespace label  oc describe - oc describe project network-test|grep Label name=
        podSelector:
          matchLabels:
            deployment: sample-app  # deployment label for pod - FROM: oc describe pod sample-app-d5f945-5r55m|grep Labels deployment=
      ports:
      - port: 8080
        protocol: TCP
